--- a/src/app/account-list/account-list.component.html
+++ b/src/app/account-list/account-list.component.html
@@ -13,7 +13,7 @@
             compte</a>
     </nav>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-warning" routerLinkActive="active" routerLink="/clients-list">Liste des clients </a>
+        <a class="btn btn-warning" (click)="goBack()">Retour au client </a>
     </nav>
     <nav class="my-2 my-md-0 mr-md-3">
         <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
