--- a/src/app/advisor-create/advisor-create.component.html
+++ b/src/app/advisor-create/advisor-create.component.html
@@ -7,8 +7,8 @@
 </div>
 
 <nav class="my-2 my-md-0 mr-md-3">
-        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
-    </nav>
+    <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+</nav>
 
 <div class="container custom-container">
     <div class="col-md-12">
@@ -32,7 +32,7 @@
                 <button class="btn btn-success btn-lg btn-block" [disabled]="!createAdvisorForm.form.valid"
                     (click)="addAdvisor()">Creer un conseiller</button>
                 <button class="btn btn-warning btn-lg btn-block" routerLinkActive="active"
-                    routerLink="/advisors-list">Retour a la liste des conseillers</button>
+                    routerLink="/advisors-list/{{idman}}">Retour a la liste des conseillers</button>
             </div>
         </form>
     </div>
