--- a/src/app/advisor-list/advisor-list.component.html
+++ b/src/app/advisor-list/advisor-list.component.html
@@ -9,7 +9,8 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Gestion des conseillers</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-info" routerLinkActive="active" routerLink="/create-advisor">Creer un conseiller</a>
+        <a class="btn btn-info" routerLinkActive="active" routerLink="/create-advisor/{{idmanager}}">Creer un
+            conseiller</a>
     </nav>
     <nav class="my-2 my-md-0 mr-md-3">
         <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
@@ -22,7 +23,8 @@
 
     <div class="no-data text-center" *ngIf="advisor.length == 0">
         <p>Il n'y a pas encore de conseillers</p>
-        <button class="btn btn-outline-primary" routerLink="/create-advisor">Ajouter un conseiller</button>
+        <button type="button" class="btn btn-outline-primary" routerLinkActive="active"
+            routerLink="/create-advisor/{{idmanager}}">Ajouter un conseiller</button>
     </div>
 
     <div *ngIf="advisor.length !== 0">
