--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,22 +11,21 @@
         <h4>Connexion Conseiller</h4>
         <div class="login">
             <label for="exampleInputLogin">Identification</label>
-            <input type="login" class="form-control w-75 mx-auto" id="exampleInputLogin1" aria-describedby="emailHelp"
+            <input type="text" class="form-control w-75 mx-auto" id="exampleInputLogin1" aria-describedby="emailHelp"
                 placeholder="Identifiant" #loginadvisor>
 
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
-            <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1"
-                placeholder="Mot de passe" #passwordadvisor>
+            <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1" placeholder="Mot de passe"
+                #passwordadvisor>
         </div>
         <div class="form-group form-check">
 
 
         </div>
-        <button type="submit" class="btn btn-outline btncolor" routerLinkActive="active"
-            routerLink="/clients-list">Connexion</button>
-        <!-- <button type="submit" class="btn btn-primary" (click)="advisorConnection(loginadvisor, passwordadvisor)">Connexion</button> -->
+        <button type="submit" class="btn btn-primary"
+            (click)="advisorConnection(loginadvisor, passwordadvisor)">Connexion</button>
     </div>
 </form>
 
@@ -36,19 +35,19 @@
         <div class="form-group">
             <label for="exampleInputEmail1">Identification</label>
             <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Identifiant">
+                placeholder="Identifiant" #loginmanager>
 
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
             <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1"
-                placeholder="Mot de passe">
+                placeholder="Mot de passe" #passwordmanager>
         </div>
         <div class="form-group form-check">
 
 
         </div>
-        <button type="submit" class="btn btn-outline btncolor" routerLinkActive="active"
-            routerLink="/advisors-list">Connexion</button>
+        <button type="submit" class="btn btn-outline btncolor"
+            (click)="managerConnection(loginmanager, passwordmanager)">Connexion</button>
     </div>
 </form>
